# EnvOpenAudio

./: .gitignore  README.md
3dModels/: README.md
Firmware/: CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
KiCad/: README.md
KiCad/EnvOpenAudio/: EnvOpenAudio.kicad_pcb  EnvOpenAudio.kicad_prl  EnvOpenAudio.kicad_pro  EnvOpenAudio.kicad_sch  fp-lib-table  sym-lib-table
KiCad/EnvOpenAudio-RP2040/: EnvOpenAudio.kicad_pcb  EnvOpenAudio.kicad_prl  EnvOpenAudio.kicad_pro  EnvOpenAudio.kicad_sch  fp-info-cache
KiCad/EnvOpenAudio-RP2040/Resources/: TLV320AIC3100.kicad_sym
KiCad/EnvOpenAudio-RP2040/Resources/PCM3060PWR/: PCM3060PWR.dcm  PCM3060PWR.kicad_sym  PCM3060PWR.mod  SOP65P640X120-28N.kicad_mod
KiCad/EnvOpenAudio-RP2040/Resources/TLV320AIC3100.pretty/: RHB32_3P45X3P45.kicad_mod
KiCad/EnvOpenAudio-RP2350/: EnvOpenAudio.kicad_pcb  EnvOpenAudio.kicad_prl  EnvOpenAudio.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
KiCad/OLD FILES/TPA2016+UDA1334/: TPA2016+UDA1334.kicad_prl
KiCad/OLD FILES/USB-Sound-Card/: sym-lib-table
KiCad/TPA2016+UDA1334/: TPA2016+UDA1334.kicad_prl  TPA2016+UDA1334.kicad_pro  TPA2016+UDA1334.kicad_sch  sym-lib-table
KiCad/TPA2016+UDA1334/Symbols/: TPA2016D2-eagle-import.kicad_sym
KiCad/TPA2016D2/: TPA2016D2.kicad_prl  TPA2016D2.kicad_pro  TPA2016D2.kicad_sch  sym-lib-table
KiCad/UDA1334/: UDA1334-eagle-import.kicad_sym  UDA1334.kicad_prl  UDA1334.kicad_pro  UDA1334.kicad_sch  sym-lib-table
KiCad/USB-Sound-Card/: PCM2900C.kicad_pcb  PCM2900C.kicad_prl  PCM2900C.kicad_pro  PCM2900C.kicad_sch  USB-Sound-Card.kicad_pro
(+1 files in other folders)
